--- a/graphql-server/vercel.json
+++ b/graphql-server/vercel.json
@@ -14,6 +14,10 @@
       "src": "/(.*)",
       "dest": "src/main.ts",
       "methods": ["GET", "POST", "PUT", "DELETE"]
+    },
+    {
+      "src": "/schema.gql",
+      "dest": "/src/schema.gql"
     }
   ]
 }
